--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
   <!-- Required -->
   <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/docsify.min.js"></script>
 
+  <!-- 高亮Java -->
+  <script src="//unpkg.com/prismjs/components/prism-java.js"></script>
+
   <!-- Recommended -->
   <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/zoom-image.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/search.js"></script>
