--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 
  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <!--Java代码高亮-->
-  <link rel="stylesheet" href="/light/styles/github-dark-dimmed.min.css">
   <script src="/light/highlight.min.js"></script>
+<script>
+  hljs.highlightAll();
+</script>
   <!--<script src="//cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-cpp.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-c.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-python.min.js"></script>
