--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Default Theme (see https://docsify.js.org/#/themes) -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
 
-</head>
+.</head>
 
 <body>
   <div id="app"></div>
@@ -44,9 +44,7 @@
  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <!--Java代码高亮-->
   <script src="/light/highlight.min.js"></script>
-<script>
-  hljs.highlightAll();
-</script>
+
   <!--<script src="//cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-cpp.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-c.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-python.min.js"></script>
