--- a/index.html
+++ b/index.html
@@ -42,14 +42,23 @@ i<!DOCTYPE html>
   </script>
 
  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-  <!--Java代码高亮-->
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-cpp.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-c.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-python.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-go.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-php.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-java.min.js"></script>
+  <!--代码高亮-->
+  <script src="/light/languages/bash.min.js"></script>
+  <script src="/light/languages/c.min.js"></script>
+  <script src="/light/languages/cpp.min.js"></script>
+  <script src="/light/languages/csharp.min.js"></script>
+  <script src="/light/languages/css.min.js"></script>
+  <script src="/light/languages/diff.min.js"></script>
+  <script src="/light/languages/go.min.js"></script>
+  <script src="/light/languages/graphql.min.js"></script>
+  <script src="/light/languages/java.min.js"></script>
+  <script src="/light/languages/javascript.min.js"></script>
+  <script src="/light/languages/json.min.js"></script>
+  <script src="/light/languages/kotlin.min.js"></script>
+  <script src="/light/languages/less.min.js"></script>
+  <script src="/light/languages/lua.min.js"></script>
+  <script src="/light/languages/php.min.js"></script>
+  <script src="/light/languages/python.min.js"></script>
   <!--全文搜索,直接用官方提供的无法生效-->
   <script src="https://cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
   <!-- 复制到剪贴板 -->
