--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-i<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -43,7 +43,7 @@ i<!DOCTYPE html>
 
  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <!--代码高亮-->
-  <script src="/light/alight.js"></script>
+  <script src="//doc.hapuren.cn/light/alight.js"></script>
   <!--全文搜索,直接用官方提供的无法生效-->
   <script src="https://cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
   <!-- 复制到剪贴板 -->
