--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Default Theme (see https://docsify.js.org/#/themes) -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
 
-.</head>
+</head>
 
 <body>
   <div id="app"></div>
@@ -42,8 +42,27 @@
   </script>
 
  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+  
   <!--代码高亮-->
-  <script src="//doc.hapuren.cn/light/alight.js"></script>
+  <!-- 引入 Prism 的核心 CSS 文件 -->
+  <link href="https://cdn.jsdelivr.net/npm/prismjs@1/prism.min.css" rel="stylesheet" />
+  <!-- 引入 Prism 的核心 JavaScript 文件 -->
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/prism.min.js"></script>
+  <!-- 引入 Python 语言的代码高亮支持 -->
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-python.min.js"></script>
+  <!-- 引入 PHP 语言的代码高亮支持 -->
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-php.min.js"></script>
+  <!-- 引入 Java 语言的代码高亮支持 -->
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-java.min.js"></script>
+  <!-- 引入 C++ 语言的代码高亮支持 -->
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-cpp.min.js"></script>
+  <!-- 引入 C 语言的代码高亮支持 -->
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-c.min.js"></script>
+  <!-- 引入 Go 语言的代码高亮支持 -->
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-go.min.js"></script>
+  <!-- 引入 HTML 语言的代码高亮支持 -->
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-markup.min.js"></script>
+  
   <!--全文搜索,直接用官方提供的无法生效-->
   <script src="https://cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
   <!-- 复制到剪贴板 -->
